# ropfuscator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BinAutopsy.cpp  BinAutopsy.h  CMakeLists.txt  CapstoneLLVMAdpt.cpp  CapstoneLLVMAdpt.h  ChainElem.h  Dockerfile  LICENSE  LivenessAnalysis.cpp  LivenessAnalysis.h  Pipfile  README.md  ROPseeker.h  RopfuscatorBinAutopsy.cpp  RopfuscatorBinAutopsy.h  RopfuscatorCapstoneLLVMAdpt.cpp  RopfuscatorDebug.h  RopfuscatorLivenessAnalysis.cpp  RopfuscatorXchgGraph.cpp  RopfuscatorXchgGraph.h  SymExtractor.h  X86.h  X86.patch  X86ROPUtils.cpp  X86ROPUtils.h  X86ROPfuscator.cpp  X86TargetMachine.cpp  X86TargetMachine.patch  XchgGraph.cpp  XchgGraph.h  debug-build.nix  debug-libc.nix  debug-librop.nix  debug.nix  default.nix  flake-example.nix  (+11 more)
Ropfuscator/: BinAutopsy.cpp  BinAutopsy.h  CapstoneLLVMAdpt.cpp  CapstoneLLVMAdpt.h  ChainElem.h  Debug.cpp  Debug.h  LivenessAnalysis.cpp  LivenessAnalysis.h  Microgadget.h  OpaqueConstruct.cpp  OpaqueConstruct.h  ROPEngine.cpp  ROPEngine.h  ROPfuscatorConfig.cpp  ROPfuscatorConfig.h  ROPfuscatorCore.cpp  ROPfuscatorCore.h  Section.h  Symbol.h  X86AssembleHelper.h  XchgGraph.cpp  XchgGraph.h
binutils/: CMakeLists.txt  Dockerfile  addr2line.bc  ar.bc  as.bc  c++filt.bc  elfedit.bc  gdbreplay.bc  gdbserver.bc  gprof.bc  ld.bc  nm.bc  objcopy.bc  objdump.bc  ranlib.bc  readelf.bc  size.bc  strings.bc  strip.bc
cmake/: debug-toolchain.cmake  release-toolchain.cmake  ropfuscator-buildonly.cmake  ropfuscator-utils.cmake  ropfuscator.cmake
configs/: level0.conf  level0.toml  level1.conf  level1.toml  level2.conf  level2.toml  level3.conf  level3.toml  opaque-multcomp.conf  (+14 more)
evaluation/crackme/: CMakeLists.txt
evaluation/crackme/angr/: angr_helper.py  solve.crackme1.py  solve.defcon-quals-2016-baby-re.py  solve.defcon-quals-2017-magic.py  solve.google-ctf-2018-gatekeeper.py
evaluation/crackme/attack/: solve.defcon-quals-2016-amadhj.py
evaluation/crackme/rop_dynamic/: rop_analyze.py
evaluation/crackme/rop_static/deropfuscator-cxx/: .clang-format  CMakeLists.txt
evaluation/crackme/rop_static/deropfuscator-cxx/src/: CMakeLists.txt  asmanalysis.hpp  deropfuscator.cpp  elfanalysis.cpp  elfanalysis.hpp
evaluation/crackme/ropf/: opaque.conf  opaque1.conf  opaque2.conf  plain.conf  roponly.conf  stegano.conf
evaluation/crackme/scripts/: run-eval-robust-angr-ctf.sh  run-eval-robust-angr-orig.sh  run-eval-robust-static-orig.sh
evaluation/crackme/src_ctf/: defcon-quals-2016-amadhj.c  defcon-quals-2016-baby-re.c  defcon-quals-2017-magic.c
evaluation/crackme/src_orig/: crackme2.c
evaluation/crackme/staticanalysis/: decompile-r2.py  decompile-retdec.py  reverse_imm_operands.py
evaluation/crackme/syntia/: test1.sh  tracer.py
evaluation/crackme/syntia/docker/: Dockerfile  filter_sample.py  test.sh
evaluation/performance/: CMakeLists.txt  README.md
evaluation/performance/binutils-input/: libstdc++.so.6.xz  syms10.txt.xz
evaluation/performance/ropf/: opaque.conf  opaque1.conf  opaque2.conf  plain.conf  roponly.conf  stegano.conf
evaluation/performance/speccpu2017/: ropf-instrstat-o0.cfg  ropf-instrstat-o3.cfg  ropf-opaque-o0.cfg  ropf-opaque-o3.cfg  ropf-plain-o0.cfg  ropf-plain-o3.cfg  ropf-roponly-o0.cfg  ropf-roponly-o3.cfg  ropf-stegano-o0.cfg  ropf-stegano-o3.cfg
evaluation/tigress/: CMakeLists.txt  vanilla-tigsam-10.c  vanilla-tigsam-100.c  vanilla-tigsam-1000.c  vanilla-tigsam-110.c  vanilla-tigsam-120.c  vanilla-tigsam-130.c  vanilla-tigsam-150.c  vanilla-tigsam-160.c  vanilla-tigsam-170.c  vanilla-tigsam-180.c  vanilla-tigsam-190.c  vanilla-tigsam-200.c  vanilla-tigsam-30.c  vanilla-tigsam-300.c  vanilla-tigsam-350.c  vanilla-tigsam-400.c  vanilla-tigsam-450.c  vanilla-tigsam-500.c  vanilla-tigsam-550.c  vanilla-tigsam-60.c  vanilla-tigsam-600.c  vanilla-tigsam-650.c  vanilla-tigsam-70.c  vanilla-tigsam-700.c  vanilla-tigsam-750.c  vanilla-tigsam-80.c  vanilla-tigsam-800.c  vanilla-tigsam-850.c  vanilla-tigsam-90.c  vanilla-tigsam-900.c  vanilla-tigsam-950.c
evaluation/tigress/docs/: README.md  angr_solve_times.csv
evaluation/tigress/scripts/: average_execution_time.py  benchmark_solve_time.sh  solve_tigress_chall.py
examples/: .gdb_history  CMakeLists.txt  Makefile  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  run_tests.py
examples/lib/src/: libnaive.c  libnaive.s
examples/opaque_predicate/src/: op.c
lib/: CMakeLists.txt
librop/: .gitignore  CMakeLists.txt  genasm.py  genlib.py
ropfuscator-extra/: .gitignore  CMakeLists.txt  README.md  llvm-7.patch  ropfuscator-default.conf
ropfuscator-extra/binutils/: .gitignore  CMakeLists.txt  Dockerfile  build-bitcode.sh  elfedit.bc  gdbreplay.bc  readelf.bc
ropfuscator-extra/cmake/: debug-toolchain.cmake  release-toolchain.cmake  ropfuscator.cmake  toolchain.cmake
ropfuscator-extra/configs/: opaque-dummy-branch-addreg-limit4.conf  opaque-dummy-branch-addreg-limit8.conf  opaque-dummy-branch-negstk.conf  opaque-dummy.conf  opaque-multcomp-branch-addreg.conf  opaque-multcomp.conf  plain.conf
ropfuscator-extra/evaluation/: CMakeLists.txt  README.md  instrstat.conf
ropfuscator-extra/evaluation/attacks/: eval_crackme_solve.py
ropfuscator-extra/evaluation/crackme/: CMakeLists.txt
ropfuscator-extra/evaluation/crackme/attack/: angr_helper.py  solve-default.crackme2.py  solve-trace.crackme1.py  solve-trace.crackme2.py  solve.crackme1.py  solve.crackme2.py  solve.defcon-quals-2016-baby-re.py  solve.defcon-quals-2017-magic.py
ropfuscator-extra/evaluation/crackme/scripts/: run-eval-robust-angr.sh
ropfuscator-extra/evaluation/crackme/src_orig/: crackme1.c  crackme2.c
ropfuscator-extra/examples/: .gitignore  CMakeLists.txt  example2.c  example7.c  hello_world.c  pointers.c  run_tests.py
ropfuscator-extra/examples/lib/: CMakeLists.txt
ropfuscator-extra/examples/src/: CMakeLists.txt
ropfuscator-extra/testcase/: CMakeLists.txt  README.md  run-and-compare-results.cmake
ropfuscator-extra/testcase/src/: testcase004.c
tests/: CMakeLists.txt  generate_configs.py  shell.nix
(+94 files in other folders)
